# grok2api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PR_DESCRIPTION.md  README.en.md  README.md  REAMDE.md  config.defaults.toml  config.toml  docker-compose.yml  docker-entrypoint.sh  env.example  grok2api-voice-patch.md  main.py  pyproject.toml  readme.md  requirements.txt  test_video.py  test_video_token_routing.py  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflow/: docker.yml
.github/workflows/: docker.yml  security.yml  sync-upstream.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/admin/: manage.py
app/api/pages/: __init__.py  admin.py  public.py
app/api/v1/: __init__.py  admin.py  chat.py  files.py  image.py  images.py  models.py  pages.py  video.py  voice.py
app/assets/css/: app.css
app/control/account/: __init__.py  commands.py  enums.py  invalid_credentials.py  models.py  quota_defaults.py  refresh.py  repository.py  (+2 more)
app/core/: auth.py  batch.py  batch_tasks.py  config.py  exception.py  exceptions.py  logger.py  proxy_pool.py  response_middleware.py  storage.py
app/mcp/: __init__.py  server.py  tools.py
app/migrate/: README.md  __init__.py  account.py  config.py  runner.py
app/migrations/: account_v1_to_v2.py  runner.py
app/models/: grok_models.py  openai_schema.py
app/platform/: errors.py  update_check.py
app/products/: _account_selection.py
app/static/: test_voice.html
app/template/: admin.html  login.html
data/: config.toml  setting.toml  token.json
docs/: README.en.md  proxy-architecture.md
scripts/: init_storage.sh  test_usage_response.py  test_voice_connection.py  vercel_prepare_static.py
test/: test_concurrency.py  test_concurrency.sh
tests/: test_account_on_demand_refresh_trigger.py  test_account_refresh_rate_limit.py  test_account_selection.py  test_account_selector_window_reset.py  test_model.py  test_public_api_stream_defaults.py  test_sql_engine_ssl.py  test_transport_error_wrapping.py
(+355 files in other folders)
