[project]
name = "grok2api"
version = "2.0.0.rc0"
description = "Grok2API rebuilt with FastAPI, fully aligned with the latest web call format. Supports streaming and non-streaming chat, image generation/editing, deep thinking, token pool concurrency, and automatic load balancing."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "aiohttp-socks>=0.11.0",
    "aiomysql>=0.2.0",
    "asyncpg>=0.31.0",
    "certifi>=2025.10.5",
    "curl-cffi>=0.13.0",
    "fastapi>=0.119.0",
    "granian>=2.7.2",
    "loguru>=0.7.3",
    "orjson>=3.11.4",
    "pydantic>=2.12.3",
    "python-multipart>=0.0.21",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.46",
    "starlette>=0.48.0",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
